--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,7 @@
 macos_option_as_alt yes
 include ./theme.conf
-
+font_family RobotoMono Nerd Font Regular
+font_size 16.0
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
