feat(kitty): updated titlebar color and window dimensions

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,6 +2,9 @@ macos_option_as_alt yes
 include ./theme.conf
 font_family RobotoMono Nerd Font Regular
 font_size 16.0
+macos_titlebar_color #1E1E1E
+nitial_window_width=100
+initial_window_height=100
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
