--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,7 +2,7 @@ macos_option_as_alt yes
 include ./theme.conf
 font_family RobotoMono Nerd Font Regular
 font_size 16.0
-macos_hide_titlebar yes 
+macos_titlebar_color #282c34
 initial_window_width=120
 initial_window_height=40
 
