feat(formatting): setup conform for formatting

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,10 +1,13 @@
 macos_option_as_alt yes
+map cmd+t launch --cwd=current --type=tab
+
 include ./theme.conf
 font_family RobotoMono Nerd Font Regular
-font_size 16.0
+font_size 15.0
 macos_titlebar_color #282c34
 initial_window_width=120
 initial_window_height=40
+
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
