feat(formatter): added prettier as formatter

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,12 +2,17 @@ macos_option_as_alt yes
 map cmd+t launch --cwd=current --type=tab
 
 include ./theme.conf
-font_family RobotoMono Nerd Font Regular
+cursor_blink_interval 0
+font_family MesloLGL Nerd Font Mono Regular
 font_size 15.0
-macos_titlebar_color #282c34
-initial_window_width=120
-initial_window_height=40
-
+window_border_width 1
+window_margin_width 6
+window_padding_width 1
+macos_titlebar_color background 
+adjust_line_height 95%
+initial_window_width 1350
+initial_window_height 900
+remember_window_size no
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
