--- a/kitty/theme.conf
+++ b/kitty/theme.conf
@@ -1,29 +1,41 @@
-# Colors
+macos_titlebar_color background
 
-foreground #979eab
-background #282c34
+foreground           #d4d4d4
+background           #1e1e1e
+selection_foreground #1e1e1e
+selection_background #d7ba7d
+url_color            #4ec9b0
+cursor               #d4d4d4
+cursor_text_color    #1e1e1e
 
-color0 #282c34
-color1 #e06c75
-color2 #98c379
-color3 #e5c07b
-color4 #61afef
-color5 #be5046
-color6 #56b6c2
-color7 #979eab
-color8 #393e48
-color9 #d19a66
-color10 #56b6c2
-color11 #e5c07b
-color12 #61afef
-color13 #be5046
-color14 #56b6c2
-color15 #abb2bf
+# black
+color0 #000000
+color8 #808080
 
-# Tab Bar
+# red
+color1 #d16969
+color9 #ce9178
 
-active_tab_foreground   #282c34
-active_tab_background   #979eab
-inactive_tab_foreground #abb2bf
-inactive_tab_background #282c34
+# green
+color2  #608b4e
+color10 #b5cea8
 
+# yellow
+color3  #d7ba7d
+color11 #dcdcaa
+
+# blue
+color4  #569cd6
+color12 #9cdcfe
+
+# magenta
+color5  #c586c0
+color13 #c586c0
+
+# cyan
+color6  #4ec9b0
+color14 #4ec9b0
+
+# white
+color7  #d4d4d4
+color15 #ffffff
