--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,2 +1,5 @@
-set -g mouse
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
 
+run '~/.tmux/plugins/tpm/tpm'
