--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,11 @@
 macos_option_as_alt yes
-map cmd+t launch --cwd=current --type=tab
 
 include ./theme.conf
+
 cursor_blink_interval 0
+cursor_shape block
+shell_integration  no-cursor
+
 font_family MesloLGL Nerd Font Mono Regular
 font_size 15.0
 window_border_width 1
@@ -13,6 +16,8 @@ adjust_line_height 95%
 initial_window_width 1600
 initial_window_height 950
 remember_window_size no
+
+kitty +kitten ssh 
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
