feat(brew): replaced docker formulae with cask

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -4,7 +4,6 @@ tap "homebrew/services"
 tap "oven-sh/bun"
 tap "weaveworks/tap"
 brew "awscli"
-brew "docker"
 brew "fd"
 brew "fzf"
 brew "git"
@@ -16,18 +15,19 @@ brew "gradle"
 brew "kubernetes-cli"
 brew "maven"
 brew "minikube"
-brew "mysql", restart_service: true
+brew "mysql"
 brew "neovim"
 brew "node@18", link: true
 brew "openjdk@17"
 brew "postgresql@14"
-brew "redis", restart_service: true
+brew "redis"
 brew "ripgrep"
 brew "rust"
 brew "tmux"
 brew "zsh-autocomplete"
 brew "weaveworks/tap/eksctl"
 cask "displaylink"
+cask "docker"
 cask "font-hack-nerd-font"
 cask "git-credential-manager"
 cask "google-chrome"
