feat(zsh-autosuggestions): added zsh-autosuggestions plugin

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -24,7 +24,7 @@ brew "redis"
 brew "ripgrep"
 brew "rust"
 brew "tmux"
-brew "zsh-autocomplete"
+brew "zsh-autosuggestions"
 brew "weaveworks/tap/eksctl"
 cask "displaylink"
 cask "docker"
