feat(brew): removed unused casks

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -26,19 +26,14 @@ brew "rust"
 brew "tmux"
 brew "zsh-autosuggestions"
 brew "weaveworks/tap/eksctl"
+cask "bitwarden"
 cask "displaylink"
 cask "docker"
+cask "firefox"
 cask "font-hack-nerd-font"
 cask "git-credential-manager"
 cask "google-chrome"
-cask "intellij-idea"
 cask "kitty"
-cask "microsoft-auto-update"
-cask "microsoft-outlook"
-cask "microsoft-teams"
 cask "numi"
-cask "postman"
-cask "slack"
 cask "spotify"
-cask "visual-studio-code"
 cask "zoom"
