feat(brew): brewfile update

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,21 +1,15 @@
-tap "homebrew/bundle"
-tap "homebrew/cask-fonts"
-tap "homebrew/services"
-tap "oven-sh/bun"
-tap "weaveworks/tap"
 brew "awscli"
+brew "python@3.12"
 brew "fd"
 brew "fzf"
 brew "git"
 brew "go"
-brew "icu4c"
-brew "harfbuzz"
-brew "little-cms2"
 brew "gradle"
+brew "imagemagick"
 brew "kubernetes-cli"
 brew "maven"
 brew "minikube"
-brew "mysql"
+brew "mysql", restart_service: true
 brew "neovim"
 brew "node@18", link: true
 brew "openjdk@17"
@@ -30,10 +24,9 @@ cask "bitwarden"
 cask "displaylink"
 cask "docker"
 cask "firefox"
-cask "font-hack-nerd-font"
 cask "git-credential-manager"
-cask "google-chrome"
 cask "kitty"
 cask "numi"
+cask "rapidapi"
 cask "spotify"
 cask "zoom"
