feat(kitty): updated ssh settings for kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -19,7 +19,8 @@ initial_window_height 950
 remember_window_size no
 
 adjust_line_height 95%
-kitty +kitten ssh 
+# kitty +kitten ssh 
+paste_actions confirm-if-large
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
