feat(brew): removed RapidAPI from brew casks

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,7 +9,7 @@ brew "imagemagick"
 brew "kubernetes-cli"
 brew "maven"
 brew "minikube"
-brew "mysql", restart_service: true
+brew "mysql"
 brew "neovim"
 brew "node@18", link: true
 brew "openjdk@17"
@@ -24,9 +24,9 @@ cask "bitwarden"
 cask "displaylink"
 cask "docker"
 cask "firefox"
+cask "font-hack-nerd-font"
 cask "git-credential-manager"
 cask "kitty"
 cask "numi"
-cask "rapidapi"
 cask "spotify"
 cask "zoom"
