feat(java): uninstalled java config for nvim, migrated to intellij

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -26,6 +26,7 @@ cask "docker"
 cask "firefox"
 cask "font-hack-nerd-font"
 cask "git-credential-manager"
+cask "intellij-idea-ce"
 cask "kitty"
 cask "numi"
 cask "spotify"
