feat(brew): added postman and minecraft as casks

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -28,6 +28,8 @@ cask "font-hack-nerd-font"
 cask "git-credential-manager"
 cask "intellij-idea-ce"
 cask "kitty"
+cask "minecraft"
 cask "numi"
+cask "postman"
 cask "spotify"
 cask "zoom"
