feat(kitty): removed tabs and windows keymappings

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -12,6 +12,8 @@ font_size 15.0
 
 #keymaps
 macos_option_as_alt yes
+map cmd+enter discard_event
+map cmd+t discard_event
 
 #ssh
 kitty +kitten ssh 
