--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,29 +1,22 @@
-#colorscheme
-include ./theme.conf
+shell /bin/bash
 
-#cursor
 cursor_blink_interval 0
 cursor_shape block
 shell_integration no-cursor
 
-#font
 font_family MesloLGL Nerd Font Mono Regular
-font_size 15.0
+font_size 13.0
 
-#keymaps
 macos_option_as_alt yes
 map cmd+enter discard_event
 map cmd+t discard_event
 
-#ssh
 kitty +kitten ssh 
 paste_actions confirm-if-large
 
-#titlebar
 macos_show_window_title_in none
 macos_titlebar_color background 
 
-#window
 initial_window_height 950
 initial_window_width 1600
 remember_window_size no
