--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,11 +1,12 @@
 shell /bin/bash
+include ./theme.conf
 
 cursor_blink_interval 0
 cursor_shape block
 shell_integration no-cursor
 
 font_family MesloLGL Nerd Font Mono Regular
-font_size 13.0
+font_size 15.0
 
 macos_option_as_alt yes
 map cmd+enter discard_event
